# vodnik

./: Cargo.toml  LICENSE.txt  api.org  api.verb.org  idea.txt
src/: api.rs  crud.rs  helpers.rs  hot.rs  ingest.rs  main.rs  meta.rs  persistence.rs  query.rs
src/meta/: block.rs  schema.sql  store.rs
vodnik-cli/: Cargo.toml
vodnik-cli/src/: main.rs
vodnik-core/: Cargo.toml
vodnik-core/src/: api.rs  codec.rs  helpers.rs  lib.rs  meta.rs  wal.rs
vodnik-server/: Cargo.toml
vodnik-server/src/: api.rs  crud.rs  hot.rs  ingest.rs  main.rs  meta.rs  persistence.rs  query.rs  wal.rs
vodnik-server/src/meta/: block.rs  store.rs
