[package]
name = "vodnik"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.7"
bytes = "1.11.0"
num-traits = "0.2.19"
opendal = { version = "0.55.0", features = ["services-fs"] }
regex = "1.12.2"
sea-orm = { version = "1.1.19", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = "symbols"
