[package]
name = "vodnik-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
vodnik-core = { path = "../vodnik-core" }

clap = { version = "4.5.54", features = ["derive"] }
reqwest = { version = "0.13.1", features = ["json"] }

serde = { workspace = true }
serde_json = "1.0.148"
tokio = { version = "1.49.0", features = ["full"] }
tracing = { workspace = true }
anyhow = "1.0.100"
