[package]
name = "vodnik-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
vodnik-core = { path = "../vodnik-core" }

anyhow = "1.0.100"
axum = "0.8.7"
bytes = "1.11.0"
dashmap = "6.1.0"
num-traits = { workspace = true }
opendal = { version = "0.55.0", features = ["services-fs"] }
regex = "1.12.2"
sea-orm = { version = "1.1.19", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }
serde = { workspace = true }
serde_json = "1.0.145"
thiserror = { workspace = true }
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
ulid = "1.2.1"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = "symbols"
